# Pyratag

./: .gitignore  LICENSE  README.md  audiotags.py  common.py  filemanager.py  filetable.py  form.ui  init.sh  main.py  mainwindow.py  metadatamanager.py  pyproject.toml  rc_resources.py  requirements.txt  resources.qrc  ui_form.py
audio/: tag.py  tags.py
audio/converters/: mp3.py  mp4.py
