[project]
name = "PySide Widgets Project"

[tool.pyside6-project]
files = ["audio/converters/mp3.py", "audio/converters/mp4.py", "audio/tag.py", "audio/tags.py", "audiotags.py", "common.py", "filemanager.py", "form.ui", "init.sh", "main.py", "metadatamanager.py", "requirements.txt", "resources.qrc"]
